--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,12 @@
 	padding: 2%;
 	height: 80px;
 }
+.logo-painel{
+	z-index: 3;
+}
+.logo-painel img{
+	width: 350px;
+}
 .topo{
 	width: 100%;
 	height: 600px;
@@ -12,7 +18,6 @@
 	align-content:center;
 	align-items: center;
 	justify-content: center;
-	/* background: url("../img/ufac_foto.jpg"); */
 	background-size: 100%;
 	position: relative;
 }
@@ -22,9 +27,9 @@
 	height: 100%;
 	bottom: 0;
 	position: absolute;
-	background: -moz-linear-gradient(left, rgba(255,152,0,0.60) 0%, rgba(211,47,47,0.45) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, rgba(255,152,0,0.60) 0%,rgba(211,47,47,0.45) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, rgba(255,152,0,0.60) 0%,rgba(211,47,47,0.45) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background: -moz-linear-gradient(left, rgba(255,152,0,0.80) 0%, rgba(211,47,47,0.80) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, rgba(255,152,0,0.80) 0%,rgba(211,47,47,0.80) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, rgba(255,152,0,0.80) 0%,rgba(211,47,47,0.80) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73ff9800', endColorstr='#73d32f2f',GradientType=1 ); /* IE6-9 */
 	z-index: 1;
 }
@@ -100,7 +105,7 @@
 		flex-wrap: nowrap;
 		width: 100%;
 	}
-  .countdown-section {
+	.countdown-section {
 		width: 100%;
 		font-size: 30px;
 	}
@@ -121,4 +126,27 @@
 .countdown-descr {
 	display: block;
 	width: 100%;
+}
+
+[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
+	position: static !important;
+	left: 0px !important; 
+	opacity: 1 !important; 
+}
+.searchandfilter h4{
+	font-size: 20px; 
+	color: #aaa;
+}
+.searchandfilter label{
+	color: #000;
+	font-size: 14px;
+}
+
+.form-busca input[type='submit']{
+	border: 0;
+	padding: 5% 2%;
+	width: 100%;
+	background: #d90845;
+	margin-top: 20px;
+	color: #FFF;
 }
